# devos-cli

./: .gitignore  Cargo.toml  README.md  projects.json
src/: main.rs
