[package]
name = "devos-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "devos"
path = "src/main.rs"
test = false
harness = false

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
